Prevent jump with inline CSS for table width
Correcting the table width with JS caused a noticeable shift in
alignment during loading, inline CSS prevent that.

Also removed the rules from the CSS file since they will now always be
correctly set by the inline CSS (don't need to worry about JS not
loading or being disabled, in this case).

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -116,14 +116,12 @@ div.results-classic-thead-background {
   position: sticky;
   top: 0;
   height: calc(12.5em + 3ex);
-  min-width: 80.5em;
 }
 
 div.results-classic-header {
   @extend .text-light;
   padding: 1.5em 0.75em;
   margin: 0 auto;
-  width: 80em;
   user-select: none; // make header text unselectable so that CTRL+A only
                      // selects the table for easy CSV for user
 
@@ -289,9 +287,7 @@ table.results-classic {
 // JS triggered
 div.results-classic-wrapper.event-focused {
 
-  // make table slightly wider
-  div.results-classic-thead-background { min-width: 84.5em; }
-  div.results-classic-header { width: 84em; }
+  // header widths (slightly wider) handled with JS
   table.results-classic { width: 84em; }
 
   table.results-classic {
